syntax = "proto3";

message NotificationRequest {
    int32 notification_id = 1;
    string notification_title = 2;
    string description = 3;
    string username = 4;
}
message NotificationResponse {
    int32 send_status = 1;
}

service AlertService {
    rpc ScheduleNotification (NotificationRequest) returns (NotificationResponse);
}